--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,7 +15,7 @@
 .userInfo_box_uploadImg_content_mian_left_btns_others{width:350px;height:14px;padding:20px 0px;}
 .userInfo_box_uploadImg_content_mian_left_btns_others label:nth-child(1),.userInfo_box_uploadImg_content_mian_left_btns_others label:nth-child(2){padding:7px 10px;background:#fff;color:#12992d;text-align: center;border-radius: 3px;border:1px solid #e3e3ed;}
 .userInfo_box_uploadImg_content_mian_left_btns_others label:nth-child(1):hover,.userInfo_box_uploadImg_content_mian_left_btns_others label:nth-child(2):hover{background: #70cc74;color:#fff;border:1px solid #5db26e;}
-.userInfo_box_uploadImg_content_mian .userInfo_box_uploadImg_content_mian_right{width:140px;height:420px; background: #f2f1f1;float:right;}
+.userInfo_box_uploadImg_content_mian .userInfo_box_uploadImg_content_mian_right{width:140px;height:420px; background: #f2f1f1;float:right;text-align: center;}
 .userInfo_box_uploadImg_content_mian_right_preview100{width:100px;height:100px;border-radius: 50%;margin:30px auto 0px;overflow: hidden;}
 .userInfo_box_uploadImg_content_mian_right_preview50{width:50px;height:50px;border-radius: 50%;margin:30px auto 0px;overflow: hidden;}
 .userInfo_box_uploadImg_content_mian_right_preview30{width:30px;height:30px;border-radius: 50%;margin:30px auto 0px;overflow: hidden;}
